--- a/resources/sass/my.scss
+++ b/resources/sass/my.scss
@@ -358,10 +358,15 @@ a {
 
     .banner {
       width: 100%;
-      min-height: 126px;
+      max-height: 126px;
       background-image: url('#{$img-url-home}nav_bg.png');
       background-size: 100% 100%;
       margin-bottom: 26px;
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
     }
 
     .message {
@@ -1334,3 +1339,4 @@ a {
     }
   }
 }
+
