--- a/resources/sass/my.scss
+++ b/resources/sass/my.scss
@@ -584,22 +584,35 @@ a {
         padding: 15px 20px 30px 25px;
 
         > .row {
-          > .col {
-            &:nth-child(1) {
+          &:nth-child(1) {
+            .col {
               padding-bottom: 24px;
             }
-            &:nth-child(2) {
-              .col {
-                &:nth-child(2) {
-                  padding-right: 4px;
-                }
-                &:nth-child(2) {
-                  padding-left: 4px;
-
-                  div {
-                    width: 110px;
+          }
+          &:nth-child(2) {
+            > .col {
+              .row {
+                .col {
+                  &:nth-child(1) {
+                    padding-right: 4px;
+                  }
+                  &:nth-child(2) {
+                    max-width: 160px;
+                    padding-left: 4px;
                   }
                 }
+              }
+            }
+          }
+          &:nth-child(4) {
+            > .col {
+              > div {
+                //height: 50px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
               }
             }
           }
