--- a/resources/sass/resume/app.scss
+++ b/resources/sass/resume/app.scss
@@ -4,3 +4,17 @@
   padding-right: 39px;
   padding-bottom: 113px;
 }
+
+.resume-list {
+  margin-top: 25px;
+
+  .resume-list-body {
+    padding-left: 39px;
+    padding-right: 39px;
+    padding-bottom: 113px;
+
+    .default-list {
+      padding-top: 48px;
+    }
+  }
+}
