--- a/public/css/common.css
+++ b/public/css/common.css
@@ -590,7 +590,7 @@ a:hover {
 }
 
 .default-form .form-body .form-group > label:first-child {
-  width: 130px;
+  width: 150px;
   text-align: right;
   margin-right: 20px;
   justify-content: flex-end;
@@ -725,6 +725,7 @@ a:hover {
 }
 
 .default-table td {
+  vertical-align: middle;
   border-bottom: 1px solid rgba(216, 56, 86, 0.1);
 }
 
@@ -1310,5 +1311,9 @@ a:hover {
 
 .btn-dropdown {
   height: 32px;
+}
+
+.dropdown-item:hover {
+  color: #D83856;
 }
 
