--- a/public/css/my.css
+++ b/public/css/my.css
@@ -725,6 +725,7 @@ a:hover {
 }
 
 .default-table td {
+  vertical-align: middle;
   border-bottom: 1px solid rgba(216, 56, 86, 0.1);
 }
 
@@ -1312,11 +1313,29 @@ a:hover {
   height: 32px;
 }
 
+.dropdown-item:hover {
+  color: #D83856;
+}
+
 
 .resume-create {
   margin-top: 25px;
   padding-left: 39px;
   padding-right: 39px;
   padding-bottom: 113px;
+}
+
+.resume-list {
+  margin-top: 25px;
+}
+
+.resume-list .resume-list-body {
+  padding-left: 39px;
+  padding-right: 39px;
+  padding-bottom: 113px;
+}
+
+.resume-list .resume-list-body .default-list {
+  padding-top: 48px;
 }
 
