--- a/resources/sass/resume/app.scss
+++ b/resources/sass/resume/app.scss
@@ -1,3 +1,9 @@
+@import '../common.scss';
+
+.bg-gray {
+  background-color: #F7F8F8;
+}
+
 .resume-create {
   margin-top: 25px;
   padding-left: 39px;
@@ -16,5 +22,172 @@
     .default-list {
       padding-top: 48px;
     }
+  }
+}
+
+.resume-show {
+  padding-top: 30px;
+
+  .resume-show-body {
+    .body-title {
+      height: 54px;
+      border: 1px solid $color-french-gray;
+
+      .trapezoid {
+        width: 115px;
+        height: 0;
+        border-width: 0 15px 42px 15px;
+        border-style: none solid solid;
+        border-color: transparent transparent white;
+        line-height: 42px;
+        margin-bottom: 2px;
+      }
+
+      > .row {
+        &:first-child {
+          height: 54px;
+        }
+      }
+    }
+
+    .body-contant {
+      border: 1px solid $color-french-gray;
+      border-top: none;
+      padding-left: 38px;
+      padding-right: 38px;
+
+      > .row {
+        &:first-child {
+          //padding: 41px 38px 31px 38px;
+          padding-top: 41px;
+          padding-bottom: 31px;
+
+          > .col {
+            &:first-child {
+              > .row {
+                height: 100%;
+              }
+            }
+            &:nth-child(2) {
+              > .row {
+                &:not(:first-child) {
+                  > .col {
+                    &:not(:first-child) {
+                      &:before {
+                        content: '';
+                        position: absolute;
+                        top: 6px;
+                        left: 0px;
+                        background: $color-french-gray;
+                        width: 1px;
+                        height: 13px;
+                      }
+                      //border-left: 1px solid $color-light-gray;
+                    }
+                  }
+                }
+
+                &:nth-child(1) {
+                  margin-bottom: 26px;
+                }
+                &:nth-child(2) {
+                  margin-bottom: 13px;
+                }
+                &:nth-child(3) {
+                  margin-bottom: 21px;
+                }
+                &:nth-child(4) {
+                  margin-bottom: 46px;
+                }
+              }
+            }
+            &:nth-child(3) {
+              a {
+                &:hover {
+                  color: $color-red;
+                }
+              }
+            }
+          }
+        }
+
+        &:not(:first-child) {
+          padding-top: 30px;
+          padding-bottom: 30px;
+        }
+      }
+    }
+  }
+
+  .nav-remarks {
+    .nav-remarks-title {
+      height: 54px;
+      border: 1px solid $color-french-gray;
+      padding-left: 30px;
+
+      > .row {
+        &:first-child {
+          height: 100%;
+        }
+      }
+    }
+
+    .nav-remarks-contant {
+      border: 1px solid $color-french-gray;
+      border-top: none;
+      padding: 30px;
+    }
+  }
+
+  .nav-ap {
+    margin-top: 25px;
+    padding-left: 30px;
+    padding-bottom: 70px;
+    border: 1px solid $color-french-gray;
+
+    ul {
+      padding-left: 0;
+
+      li {
+        height: 43px;
+        line-height: 43px;
+
+        &:first-child {
+          padding-left: 30px;
+        }
+
+        &:not(:first-child) {
+          padding-left: 30px;
+          border-left: 1px solid $color-french-gray;
+          cursor: pointer;
+
+          &:hover {
+            color: $color-red;
+            border-left-color: $color-red;
+          }
+
+          > a {
+            //height: 100%;
+            //width: 100%;
+            color: $color-n;
+
+            &:hover {
+              color: $color-red;
+            }
+          }
+        }
+      }
+
+      li.active {
+        color: $color-red;
+        border-left-color: $color-red;
+      }
+    }
+  }
+
+  h5 {
+    border-left: 4px solid $color-red;
+    padding-left: 15px;
+    margin-bottom: 25px;
   }
 }
