--- a/public/css/common.css
+++ b/public/css/common.css
@@ -26,12 +26,24 @@ a:hover {
   color: #fff;
 }
 
+a.a-gray {
+  color: #B5B5B6;
+}
+
+a.a-gray:hover {
+  color: #B5B5B6;
+}
+
 .color-n {
   color: #3E3A39;
 }
 
 .color-red {
   color: #D83856;
+}
+
+.color-dark {
+  color: #303540;
 }
 
 .color-gray {
@@ -1343,5 +1355,71 @@ a:hover {
 .tag-light {
   color: #3E3A39;
   background-color: rgba(159, 160, 160, 0.2);
+}
+
+ul.nav-sec-left {
+  width: auto;
+  height: auto;
+  padding: 12px 0;
+  margin-bottom: 0;
+  font-size: 16px;
+  color: #3E3A39;
+  background: white;
+  overflow-y: scroll;
+}
+
+ul.nav-sec-left > li {
+  line-height: 40px;
+  padding-left: 22px;
+  cursor: pointer;
+}
+
+ul.nav-sec-left > li:before {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  margin-left: -9px;
+}
+
+ul.nav-sec-left > li p {
+  margin-bottom: 0;
+}
+
+ul.nav-sec-left > li a {
+  height: 40px;
+  color: #3E3A39;
+  text-decoration: none;
+}
+
+ul.nav-sec-left li.selected {
+  padding-left: 18px;
+  border-left: 4px solid;
+  border-color: #D83856;
+  background-color: #fff;
+}
+
+ul.nav-sec-left ul.sub {
+  width: 100%;
+  height: auto;
+  padding-left: 0;
+}
+
+ul.nav-sec-left ul.sub li {
+  padding-left: 22px;
+  cursor: pointer;
+}
+
+ul.nav-sec-left ul.sub li a {
+  height: 44px;
+  line-height: 44px;
+  color: #3E3A39;
+  text-decoration: none;
+}
+
+ul.nav-sec-left ul.sub li.selected {
+  padding-left: 18px;
+  border-left: 4px solid;
+  border-color: #D83856;
+  background-color: #fff;
 }
 
