--- a/public/css/common.css
+++ b/public/css/common.css
@@ -58,6 +58,10 @@ a.a-gray:hover {
   color: #B5B5B6;
 }
 
+.color-text-gray {
+  color: #9FA0A0;
+}
+
 .font-size-xl {
   font-size: 24px;
 }
@@ -1364,62 +1368,58 @@ ul.nav-sec-left {
   margin-bottom: 0;
   font-size: 16px;
   color: #3E3A39;
-  background: white;
-  overflow-y: scroll;
 }
 
 ul.nav-sec-left > li {
   line-height: 40px;
-  padding-left: 22px;
   cursor: pointer;
 }
 
 ul.nav-sec-left > li:before {
+  width: 0;
+  height: 0;
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
+  border-bottom: 9px solid #EFEFEF;
   position: absolute;
   bottom: 0;
   left: 50%;
   margin-left: -9px;
 }
 
-ul.nav-sec-left > li p {
-  margin-bottom: 0;
-}
-
 ul.nav-sec-left > li a {
-  height: 40px;
+  height: 44px;
+  height: 44px;
+  padding-left: 22px;
+  font-size: 16px;
   color: #3E3A39;
-  text-decoration: none;
 }
 
-ul.nav-sec-left li.selected {
-  padding-left: 18px;
-  border-left: 4px solid;
-  border-color: #D83856;
-  background-color: #fff;
-}
-
-ul.nav-sec-left ul.sub {
+ul.nav-sec-left > li ul.sub {
   width: 100%;
   height: auto;
   padding-left: 0;
 }
 
-ul.nav-sec-left ul.sub li {
-  padding-left: 22px;
+ul.nav-sec-left > li ul.sub > li {
   cursor: pointer;
 }
 
-ul.nav-sec-left ul.sub li a {
+ul.nav-sec-left > li ul.sub > li a {
   height: 44px;
   line-height: 44px;
+  padding-left: 36px;
+  font-size: 14px;
   color: #3E3A39;
-  text-decoration: none;
 }
 
-ul.nav-sec-left ul.sub li.selected {
-  padding-left: 18px;
-  border-left: 4px solid;
-  border-color: #D83856;
-  background-color: #fff;
+ul.nav-sec-left > li ul.sub > li.active {
+  border-left: 4px solid #D83856;
+  background-color: white;
+}
+
+ul.nav-sec-left > li ul.sub > li.active a {
+  padding-left: 32px;
+  color: #D83856;
 }
 
