--- a/resources/sass/resume/app.scss
+++ b/resources/sass/resume/app.scss
@@ -4,6 +4,10 @@
   background-color: #F7F8F8;
 }
 
+.border-gray {
+  border-color: $color-border-gray;
+}
+
 .resume-create {
   margin-top: 25px;
   padding-left: 39px;
@@ -11,12 +15,14 @@
   padding-bottom: 113px;
 
   .addItem {
-    width: 760px;
-    height: 80px;
+    width: 710px;
+    height: 45px;
     border: 1px dashed #D83856;
     cursor: pointer;
-    line-height: 80px;
+    line-height: 45px;
     color: #D83856;
+    background-color: rgba(216, 56, 86, 0.1);
+    margin-left: 60px;
   }
 }
 
